--- a/templates/raw_map.html
+++ b/templates/raw_map.html
@@ -50,7 +50,7 @@
 
 <body>
 
-   <div class="folium-map" id="folium_4d21259f157e4a83a2909cfa509b91c7" style="width: 960px; height: 500px"></div>
+   <div class="folium-map" id="folium_77964fe31edd40e78555cc331cfd72dd" style="width: 100%px; height: 100%px"></div>
 
    <script>
 
@@ -94,9 +94,9 @@
       /*
       Creates the map and adds the selected layers
       */
-      var map = L.map('folium_4d21259f157e4a83a2909cfa509b91c7', {
+      var map = L.map('folium_77964fe31edd40e78555cc331cfd72dd', {
                                        center:[45.5088, -73.5878],
-                                       zoom: 11,
+                                       zoom: 12,
                                        maxBounds: bounds,
                                        layers: [base_tile]
                                      });
@@ -115,82 +115,82 @@
       
       var circle_1 = L.circle([45.5115944, -73.6051013], 500, {
                             color: '#000000',
-                            fillColor: '#FF0000',
+                            fillColor: '#000000',
                             fillOpacity: 0.2
                             });
-      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/01111_4UMEOuJTT8r_300x300.jpg' height='auto' width='160px' />\n                <h3>Desk</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5054941875.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_1.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>FREE BOOKS on several topics plus FREE BOXES most Wednesday morns</h3>\n                <h4>ATWATER LIBRARY-WED-8:30 to 10:30, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277828865.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_1._popup.options.maxWidth = 300;
       map.addLayer(circle_1)
       
-      var circle_2 = L.circle([45.5115944, -73.6051013], 490, {
+      var circle_2 = L.circle([45.517872, -73.579880], 490, {
                             color: '#000000',
-                            fillColor: '#FF0000',
+                            fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_2.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>looking for queen bedframe/boxspring $</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5054538617.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_2.bindPopup("\n                <img src='https://images.craigslist.org/00I0I_9EWrkVSmFbb_300x300.jpg' height='auto' width='160px' />\n                <h3>Glass blocks bricks</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277734796.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_2._popup.options.maxWidth = 300;
       map.addLayer(circle_2)
       
-      var circle_3 = L.circle([45.474487, -73.638281], 480, {
+      var circle_3 = L.circle([45.485921, -73.568435], 480, {
                             color: '#000000',
-                            fillColor: '#000000',
+                            fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_3.bindPopup("\n                <img src='https://images.craigslist.org/00M0M_aSviS8mO8NA_300x300.jpg' height='auto' width='160px' />\n                <h3>Books in Dutch about Holland</h3>\n                <h4>ndg, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5026802082.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_3.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>25 canvases (for re use)</h3>\n                <h4>Little burgandy, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277679822.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_3._popup.options.maxWidth = 300;
       map.addLayer(circle_3)
       
-      var circle_4 = L.circle([45.474487, -73.638281], 470, {
+      var circle_4 = L.circle([45.483166, -73.623313], 470, {
                             color: '#000000',
-                            fillColor: '#FF0000',
+                            fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00202_1ZkKLSvsaI_300x300.jpg' height='auto' width='160px' />\n                <h3>Wheelchair Bag</h3>\n                <h4>NDG, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5026825484.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_4.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free Dog Cage</h3>\n                <h4>Snowdon, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277315044.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_4._popup.options.maxWidth = 300;
       map.addLayer(circle_4)
       
-      var circle_5 = L.circle([45.536383, -73.571384], 460, {
+      var circle_5 = L.circle([45.4854686, -73.6279802], 460, {
                             color: '#000000',
-                            fillColor: '#FF0000',
+                            fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00W0W_jpt6MXeQL17_300x300.jpg' height='auto' width='160px' />\n                <h3>Double mattress and box spring</h3>\n                <h4>Plateau, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5053987653.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_5.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free Ping Pong Table</h3>\n                <h4>Snowdon, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277310981.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_5._popup.options.maxWidth = 300;
       map.addLayer(circle_5)
       
-      var circle_6 = L.circle([45.466943, -73.619743], 450, {
+      var circle_6 = L.circle([45.5115944, -73.6051013], 450, {
                             color: '#000000',
-                            fillColor: '#FF0000',
+                            fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_6.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free dishes, hammond organ, queen bed</h3>\n                <h4>NDG, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5053894399.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_6.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>3 air-conditioners + Stove</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5271670715.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_6._popup.options.maxWidth = 300;
       map.addLayer(circle_6)
       
-      var circle_7 = L.circle([45.518895, -73.591672], 440, {
+      var circle_7 = L.circle([45.475326, -73.584547], 440, {
                             color: '#000000',
-                            fillColor: '#FF0000',
+                            fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_7.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>FREE scrap Metal</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5053884761.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_7.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Queen size mattress</h3>\n                <h4>St Henri, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5233093554.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_7._popup.options.maxWidth = 300;
       map.addLayer(circle_7)
       
-      var circle_8 = L.circle([45.5115944, -73.6051013], 430, {
+      var circle_8 = L.circle([45.536958, -73.636299], 430, {
                             color: '#000000',
-                            fillColor: '#000000',
+                            fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_8.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>FREE BOOKS on various topics+FREE CARDBOARD BOXES- WEDNESDAY MORNINGS</h3>\n                <h4>ATWATER LIBRARY-Before 11, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5053803735.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_8.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free gay magazines</h3>\n                <h4>Villeray, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5263300062.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_8._popup.options.maxWidth = 300;
       map.addLayer(circle_8)
       
-      var circle_9 = L.circle([45.5314777, -73.6290057], 420, {
+      var circle_9 = L.circle([45.478565, -73.556188], 420, {
                             color: '#000000',
-                            fillColor: '#FF0000',
+                            fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_9.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>simple plywood low desk</h3>\n                <h4>parc extension, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5053658716.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_9.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Needed bed for my son</h3>\n                <h4>Montre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5275240441.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_9._popup.options.maxWidth = 300;
       map.addLayer(circle_9)
       
